# kneepipeline_segmentaton_website

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_OVERVIEW.md  README.md  STAGE_1_DETAILED_PLAN.md  admin.py  cuda_installer.pyz  pyproject.toml
.github/workflows/: docker-build.yml  test.yml
backend/: config.py  main.py  requirements.txt
backend/models/: __init__.py  job.py  schemas.py
backend/routes/: __init__.py  download.py  health.py  stats.py  status.py  upload.py
backend/services/: __init__.py  config_generator.py  error_handler.py  file_handler.py  job_service.py  progress_parser.py  statistics.py
backend/workers/: __init__.py  celery_app.py  dummy_worker.py  pipeline_worker.py  tasks.py
docker/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
docs/: DEPLOYMENT_HYBRID.md  DEPLOYMENT_OPTIONS.md  MODEL_WEIGHTS.md  PROJECT_OVERVIEW.md  STAGE_0_DEV_ENVIRONMENT.md  STAGE_1_DETAILED_PLAN.md  STAGE_2_OVERVIEW.md  STAGE_3_DETAILED_PLAN.md  STAGE_3_OVERVIEW.md
docs/stage_1/: README.md  STAGE_1.1_COMPLETED.md  STAGE_1.1_PROJECT_SCAFFOLDING.md  STAGE_1.2_COMPLETED.md  STAGE_1.2_MODELS_AND_SERVICES.md  STAGE_1.3_COMPLETED.md  STAGE_1.4_API_ROUTES.md  (+7 more)
frontend/: index.html
stage_1/: README.md  STAGE_1.1_PROJECT_SCAFFOLDING.md  STAGE_1.4_API_ROUTES.md  STAGE_1.5_FRONTEND.md  STAGE_1.6_DOCKER_AND_DEPLOYMENT.md
systemd/: knee-pipeline-worker.service
tests/: conftest.py  test_stage_1_1.py  test_stage_1_2.py  test_stage_1_3.py  test_stage_1_4.py  test_stage_1_6.py  test_stage_1_7.py  test_stage_3_3.py  test_stage_3_4.py  test_stage_3_5.py
(+15 files in other folders)
